--- a/EXERCICIO 03/css/template.css
+++ b/EXERCICIO 03/css/template.css
@@ -2,16 +2,16 @@
 	box-sizing: border-box;
 }
 html, body{
-	width:100%;
+	width: 100%;
 	height: 100%;
-	padding: 0%;
-	margin: 0%;
+	padding: 0;
+	margin: 0;
 	position: relative;
 	font-size: 16px;
 	font-family: sans-serif;
 }
 body{
-	background-image: url="img/back.jpg";
+	background-image: url("../img/back.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -20,7 +20,7 @@ h1 {
 	margin: 0;
 	text-align: center;
 }
-.wrap{
+.wrap{										  /* Colocando o conteúdo centralizado */
 	width: 100%;
 	max-width: 1024px;
 	margin: auto;
@@ -34,7 +34,7 @@ h1 {
 
 }
 .nav a {
-	color: gray;							/* Mudando a cor do texto */
+	color: white;							/* Mudando a cor do texto */
 	text-decoration: none;					  /* ???????? */
 	padding: 1rem;							  /* Aplicando distancia entre os links */
 	display: inline-block;					  /* Colocando maior, estilo mais retangular (EU ACHO) */
@@ -47,7 +47,7 @@ h1 {
 /* RODAPÉ */
 .footer {
 	background: rgb(44, 42, 42);			/* Cor de fundo da barra do rodapé */
-	color: darkgrey;						/* Cor do texto */
+	color: white;						/* Cor do texto */
 	display: flex;							  /* ???????? */
 	align-items: center;					  /* ???????? */
 	justify-content: space-between;			  /* Deixando um espaço entre os elementos */
@@ -61,11 +61,20 @@ h1 {
 	text-align: center;						  /* Alinhando tudo ao centro */
 	font-size: .8rem;						  /* Tamanho da fonte */
 }
-main{
-	padding: 1rem;
 
+/* Conteúdo da página inicial */
+.main { 
+	padding: 0 1.5rem;
+	color: white;
 }
-.main h2:first-child{
-	margin-top: .5rem;
-
+.main h1 {
+	margin-top: 3rem;						 /* Distancia do h1 para o topo */	
+}
+.main h3 {
+	margin-top: 4rem;						 /* Distancia do h3 para o h1 */
+}
+.main img {
+	width: 50%;								 /* Largura da imagem */
+	margin-top: 3rem;						 /* Distancia da imagem para o h3 */
+	margin-bottom: 3rem;					 /* Distancia da imagem para o rodapé */
 }
