Atualização de páginas
Inserindo página sobre.php.
onde ficarão as informações da equipe responsável pelo desenvolvimento do site.

--- a/EXERCICIO 03/css/template.css
+++ b/EXERCICIO 03/css/template.css
@@ -54,12 +54,12 @@ h1 {
 }
 .footer a{
 	display: inline-block;					  /* ???????? */
-	padding: .8rem;							  /* Altura da barra do rodapé */
+	padding: .9rem;							  /* Altura da barra do rodapé */
 	color: darkcyan;						/* Cor dos icones */
 }
 .footer div {
 	text-align: center;						  /* Alinhando tudo ao centro */
-	font-size: .8rem;						  /* Tamanho da fonte */
+	font-size: 1.1rem;						  /* Tamanho da fonte */
 }
 
 /* Conteúdo da página inicial */
@@ -77,4 +77,19 @@ h1 {
 	width: 50%;								 /* Largura da imagem */
 	margin-top: 3rem;						 /* Distancia da imagem para o h3 */
 	margin-bottom: 3rem;					 /* Distancia da imagem para o rodapé */
+}
+.destaque {
+	
+}
+.destaque h3 {
+	margin-top: .2rem;
+	text-align: center;
+	color: rgb(44, 42, 42);
+}
+.destaque p {
+	
+}
+.imagem img{
+	width: 90%;
+	height: 50%;
 }
